--- a/introduction.html
+++ b/introduction.html
@@ -3,8 +3,10 @@
     <title>&copy; Eve by &copy; Eden | Introduction</title>
   </head>
   <body>
-    <h1>&copy; Eve by &copy; Eden</h1>
-    <h2>Introduction</h2>
-    <p>Let's begin to copyright protect Eve from Eden. Here in this project, we are going to build up an online presence that accurately portrays and represents Eve from Eden. What we learn about her, what we find from her, and who she is known to be today, are all different lessons we can learn together in this site. Let's learn to love Eve for who she really is.</p>
+    <table style="width: auto;">
+      <tr><td><h1>&copy; Eve by &copy; Eden</h1></td></tr>
+      <tr><td><h2>Introduction</h2></td></tr>
+      <tr><td style="font-family: 'Brush Script MT',cursive;"><p>Let's begin to copyright protect Eve from Eden. Here in this project, we are going to build up an online presence that accurately portrays and represents Eve from Eden. What we learn about her, what we find from her, and who she is known to be today, are all different lessons we can learn together in this site. Let's learn to love Eve for who she really is.</p></td></tr>
+    </table>
   </body>
 </html>
